# ropey-etna

./: .gitignore  BUGS.md  Cargo.toml  TASKS.md  etna.toml
patches/: lines_empty_total_lines_faf6738_1.patch  rope_builder_default_empty_stack_dfcac8b_1.patch  rope_eq_utf8_boundary_cc516d5_1.patch  rope_hash_chunk_boundary_fef5be9_1.patch  slice_crlf_split_end_info_8699de0_1.patch  utf16_code_unit_conversion_c0af16b_1.patch
src/: etna.rs  iter.rs  lib.rs  rope_builder.rs  slice.rs  str_utils.rs
tests/: etna_witnesses.rs
