[package]
name = "ropey"
version = "1.6.1"
edition = "2021"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
description = "A fast and robust text rope for Rust"
documentation = "https://docs.rs/ropey"
repository = "https://github.com/cessen/ropey"
readme = "README.md"
rust-version = "1.90.0"
license = "MIT"
keywords = ["rope", "text", "edit", "buffer"]
categories = ["text-processing", "data-structures"]
exclude = ["/design/*", "/benches/*.txt", "/fuzz/**", "/.github/*"]

[features]
default = ["unicode_lines", "simd"]
cr_lines = [] # Enable recognizing carriage returns as line breaks.
unicode_lines = ["cr_lines"] # Enable recognizing all Unicode line breaks.
simd = ["str_indices/simd"]

# Internal feature: Not part of public stable API
# enables a much smaller chunk size that makes it
# easier to catch bugs without requiring huge text sizes during fuzzing.
small_chunks = []

[dependencies]
smallvec = "1.0.0"
str_indices = { version = "0.4", default-features = false }
# ETNA framework dependencies — linked by src/bin/etna.rs.
proptest = "1.11.0"
quickcheck = { git = "https://github.com/alpaylan/quickcheck.git", branch = "master", features = ["etna"] }
crabcheck = { git = "https://github.com/alpaylan/crabcheck.git", branch = "main" }
hegeltest = "0.3.7"
rand = "0.9"
fnv = "1.0.7"

[dev-dependencies]
fastrand = "2.3.0"
proptest = "1.11.0"
criterion = { version = "0.8.2", features = ["html_reports"] }
unicode-segmentation = "=1.13.2"
fnv = "1.0.7"
fxhash = "0.2.1"

#-----------------------------------------

[[bench]]
name = "create"
harness = false

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "remove"
harness = false

[[bench]]
name = "queries"
harness = false

[[bench]]
name = "iterators"
harness = false

[[bin]]
name = "etna"
path = "src/bin/etna.rs"

# ETNA: keep debug assertions on in release so internal invariants panic
# (several variants manifest only via `debug_assert!`).
[profile.release]
debug-assertions = true
